--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "mot-de-passe",
+  "author": "Brian Prost <bprost@humrro.org> (http://brianprost.com)",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.5.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
